add Header part and change font

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -9,20 +9,42 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:ital@1&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/styles.css">
-  </head>
+</head>
 
 <body>
   <!-- Header -->
   <div class="site-header">
     <div class=" site-header-container container">
-
+      <a class="site-header-logo" href="#">
+        <img src="" alt="logo">
+      </a>
+      <!-- Navlink -->
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item"><a href="#" class="sitenav-link">О себе</a></li>
+          <li class="sitenav-item"><a href="#" class="sitenav-link">Услуги</a></li>
+          <li class="sitenav-item"><a href="#" class="sitenav-link">Портфолио</a></li>
+          <li class="sitenav-item"><a href="#" class="sitenav-link">Контакты</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
+
+  <!-- end header -->
+
+  <main>
+  <!-- hero -->
+  <div class="hero-container">
+
+  </div>
+
+
+</main>
+
 </body>
 
 </html>
