Add hero part, hero image, background and styles

--- a/index.html
+++ b/index.html
@@ -38,10 +38,20 @@
 
   <main>
   <!-- hero -->
-  <div class="hero-container">
+  <div class="hero-background">
+  <div class="hero-container container">
+    <div class="hero-img">
+      <img class="hero-image" src="./img/Hero.jfif" alt="hero">
+    </div>
 
+    <div class="hero-text">
+      <a class="hero-cv-link" href="#">Frontend Developer</a>
+      <h2 class="hero-heading">Камрон Курбанов</h2>
+      <p>Frontend Разработчик, фрилансер <span>UpWork</span></p>
+      <a class="hero-link" href="#">Связатся</a>
+    </div>
   </div>
-
+</div>
 
 </main>
 
