Adding section parts and styes

--- a/index.html
+++ b/index.html
@@ -37,23 +37,69 @@
   <!-- end header -->
 
   <main>
-  <!-- hero -->
-  <div class="hero-background">
-  <div class="hero-container container">
-    <div class="hero-img">
-      <img class="hero-image" src="./img/Hero.jfif" alt="hero">
+    <!-- hero -->
+    <div class="hero-background">
+      <div class="hero-container container">
+        <div class="hero-img">
+          <img class="hero-image" src="./img/Hero.jfif" alt="hero">
+        </div>
+
+        <div class="hero-text">
+          <a class="hero-cv-link" href="#">Frontend Developer</a>
+          <h2 class="hero-heading">Камрон Курбанов</h2>
+          <p>Frontend Разработчик, фрилансер <span>UpWork</span></p>
+          <a class="hero-link" href="#">Связатся</a>
+        </div>
+      </div>
     </div>
 
-    <div class="hero-text">
-      <a class="hero-cv-link" href="#">Frontend Developer</a>
-      <h2 class="hero-heading">Камрон Курбанов</h2>
-      <p>Frontend Разработчик, фрилансер <span>UpWork</span></p>
-      <a class="hero-link" href="#">Связатся</a>
+    <!-- Socilas -->
+    <div class="socials">
+      <div class="social-one">
+        <a href="https://www.facebook.com/settings?tab=account&section=username">
+          <img class="social-net" src="./img/facebook (2) 9.svg" alt="facebook">
+        </a>
+        <a href="https://twitter.com/KamronKurbanov">
+          <img class="social-net" src="./img/twitter (1) 9.svg" alt="facebook">
+        </a>
+        <hr>
+      </div>
     </div>
-  </div>
-</div>
+<!-- Section part what I do -->
+    <div class="section">
+      <div class="about-part">
+        <h2 class="about">Я занимаюсь</h2>
+      </div>
+      <div class="blocks">
+        <div class="html">
+          <img class="skills" src="./img/frontend.svg" alt="frontend">
+          <h2 class="skills-header">Фронтенд</h2>
+          <p class="skills-text">Фронтенд рахработка вашего сайта от 0 до 100% качественно и быстро</p>
+        </div>
+        <div class="html">
+          <img class="skills" src="./img/design.svg" alt="design">
+          <h2 class="skills-header">Дизайн</h2>
+          <p class="skills-text">Не имеете свой дизайн не проблема предоставим вам дизайн по вашим требованиям</p>
+        </div>
+        <div class="html">
+          <img class="skills" src="./img/support.svg" alt="support">
+          <h2 class="skills-header">Поддержка</h2>
+          <p class="skills-text">После сдачи проекта будем сопроваждать ваш сайт в течении года </p>
+        </div>
+      </div>
+    </div>
+    <!--End Section  -->
 
-</main>
+
+
+    <!-- Potfolio -->
+
+
+
+
+
+
+  </main>
 
 </body>
 
