adding portfoli part

--- a/index.html
+++ b/index.html
@@ -90,10 +90,13 @@
     </div>
     <!--End Section  -->
 
-
-
     <!-- Potfolio -->
 
+    <div class="portfolio">
+      <div class="header-part">
+        <h2 class="portfolio-header">Мои работы</h2>
+      </div>
+    </div>
 
 
 
