add hover styles

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="html">
           <img class="skills" src="./img/frontend.svg" alt="frontend">
           <h2 class="skills-header">Фронтенд</h2>
-          <p class="skills-text">Фронтенд рахработка вашего сайта от 0 до 100% качественно и быстро</p>
+          <p class="skills-text">Фронтенд разработка вашего сайта от 0 до 100% качественно и быстро</p>
         </div>
         <div class="html">
           <img class="skills" src="./img/design.svg" alt="design">
@@ -95,6 +95,9 @@
     <div class="portfolio">
       <div class="header-part">
         <h2 class="portfolio-header">Мои работы</h2>
+      </div>
+      <div class="portfolio-image">
+
       </div>
     </div>
 
