Add Telegram SVG and style. Link Telegram to acc

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
           <a class="hero-cv-link" href="#">Frontend Developer</a>
           <h2 class="hero-heading">Камрон Курбанов</h2>
           <p>Frontend Разработчик, фрилансер <span>UpWork</span></p>
-          <a class="hero-link" href="#">Связатся</a>
+          <a class="hero-link" href="tel:+998908269292">Связатся</a>
         </div>
       </div>
     </div>
 
-    <!-- Socilas -->
+    <!-- Socials -->
     <div class="socials">
       <div class="social-one">
         <a href="https://www.facebook.com/settings?tab=account&section=username">
@@ -62,10 +62,13 @@
         <a href="https://twitter.com/KamronKurbanov">
           <img class="social-net" src="./img/twitter (1) 9.svg" alt="facebook">
         </a>
+        <a href="https://t.me/kamron_webdev">
+          <img class="social-net" src="./img/telegram.svg" alt="telegram">
+        </a>
         <hr>
       </div>
     </div>
-<!-- Section part what I do -->
+    <!-- Section part what I do -->
     <div class="section">
       <div class="about-part">
         <h2 class="about">Я занимаюсь</h2>
@@ -97,7 +100,6 @@
         <h2 class="portfolio-header">Мои работы</h2>
       </div>
       <div class="portfolio-image">
-
       </div>
     </div>
 
