Change twitter icon to LinkedIn icon and linked

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <a href="https://www.facebook.com/settings?tab=account&section=username">
           <img class="social-net" src="./img/facebook (2) 9.svg" alt="facebook">
         </a>
-        <a href="https://twitter.com/KamronKurbanov">
-          <img class="social-net" src="./img/twitter (1) 9.svg" alt="facebook">
+        <a href="https://www.linkedin.com/in/kamron-kurbanov-webdev">
+          <img class="social-net" src="./img/linkedin.svg" alt="linkedin">
         </a>
         <a href="https://t.me/kamron_webdev">
           <img class="social-net" src="./img/telegram.svg" alt="telegram">
