add Github icon and link

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <a href="https://t.me/kamron_webdev">
           <img class="social-net" src="./img/telegram.svg" alt="telegram">
         </a>
+        <a href="https://github.com/kamronghost">
+          <img class="social-net" src="./img/github.svg" alt="github" width="50" height="50">
+        </a>
         <hr>
       </div>
     </div>
