fix  facebook link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Socials -->
     <div class="socials">
       <div class="social-one">
-        <a href="https://www.facebook.com/settings?tab=account&section=username">
+        <a href="https://www.facebook.com/kamronwebdev">
           <img class="social-net" src="./img/facebook (2) 9.svg" alt="facebook">
         </a>
         <a href="https://www.linkedin.com/in/kamron-kurbanov-webdev">
