--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <!-- Header -->
   <div class="site-header">
     <div class=" site-header-container container">
-      <a class="site-header-logo" href="#">
-        <img src="" alt="logo">
+      <a class="site-header-logo" href="./index.html">
+        <img src="./img/logo.png" alt="logo" width="50" height="50">
       </a>
       <!-- Navlink -->
       <nav class="sitenav">
