adding some images and portfolio section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,24 @@
         <h2 class="portfolio-header">Мои работы</h2>
       </div>
       <div class="portfolio-image">
+        <div class="first-block">
+          <img src="./img/first.jpg" alt="first" width="534" height="591"
+            srcset="./img/first.jpg 1x, ./img/first@2x.jpg 2x">
+          <img src="./img/second.jpg" alt="first" width="716" height="630"
+            srcset="./img/second.jpg 1x, ./img/second@2x.jpg 2x">
+        </div>
+        <div class="second-block">
+          <img src="./img/third.jpg" alt="first" width="584" height="642"
+            srcset="./img/third.jpg 1x, ./img/third@2x.jpg 2x">
+          <img src="./img/fourth.jpg" alt="first" width="668" height="599"
+            srcset="./img/fourth.jpg 1x, ./img/fourth@2x.jpg 2x">
+        </div>
+
       </div>
+
+    </div>
+    <div class="button">
+      <a class="hero-link" href="https://github.com/kamronghost">Мои работы</a>
     </div>
 
 
